dons_tests/valid_kxi/unary_type_check.kxi
void main(){
    int x = -1;
    bool y = true;
    x = +x;
    !y;
}
