dons_tests/invalid_kxi/bad_unary_type_check.kxi
void main(){
    int x = -1;
    bool y = true;
    +y;
    !x;
}
